--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <main class="container">
             <article class="cookie">
-                <img src="/homework_1/cookie.jpg" alt="" />
+                <img src="cookie.jpg" alt="" />
                 <div>
                     <h2>Ингредиенты</h2>
                 <ul class="ingredients">
